[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/Tank sprite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ParticleExplosion.tscn" type="PackedScene" id=3]

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.236025, 1 )
colors = PoolColorArray( 0.993286, 1, 0.140625, 1, 1, 1, 1, 0.521739, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.393182 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.2
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 6.0
scale_curve = SubResource( 8 )
color = Color( 0.729412, 0.729412, 0.729412, 1 )
color_ramp = SubResource( 6 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 3.0

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Tonk Bullet"
}

[node name="Particles2D" type="Particles2D" parent="."]
amount = 6
lifetime = 0.2
local_coords = false
process_material = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 108, 24, 15, 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -1.07288e-06 )
scale = Vector2( 1, 1.1 )

[node name="Explosion" parent="." instance=ExtResource( 3 )]
local_coords = false

[node name="OnreadyExplosion" parent="." instance=ExtResource( 3 )]
lifetime = 0.4
local_coords = false

[connection signal="area_shape_entered" from="." to="." method="_on_Bullet_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
